Add favicon and touch icon to index.html
Added procamportable.png as favicon and Apple touch icon for better browser tab and iOS home screen integration.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <link rel="stylesheet" href="styles.css" />
+  <!-- Favicon (tarayıcı sekmesi) -->
+  <link rel="icon" type="image/png" href="img/procamportable.png" />
+  <link rel="shortcut icon" type="image/png" href="img/procamportable.png" />
+
+  <!-- iOS ana ekrana ekleme ikonu -->
+  <link rel="apple-touch-icon" href="img/procamportable.png" />
 </head>
 <body>
   <header class="topbar">
